fixed select bug on selector, right aligned hub table, fixed delete listing bug
Former-commit-id: d2e287dbad2cd5f2530ffd787f835de8436e937a
Former-commit-id: 4898ee161e1c4236619154c953d1f06c9977e110

--- a/server/public/sass/bulma/elements/table.sass
+++ b/server/public/sass/bulma/elements/table.sass
@@ -6,6 +6,10 @@
   border: 1px solid $border
   box-shadow: none
   width: 100%
+  &.no-border
+    border: 0 !important
+  &.no-background
+    background-color: transparent
   td,
   th
     text-align: left
